[gd_scene load_steps=4 format=3 uid="uid://dmsrjjaobe4i"]

[ext_resource type="Script" path="res://actors/State-Area2D/State-Area2D.gd" id="1_0c1gk"]
[ext_resource type="Theme" uid="uid://bmso01y44tkgf" path="res://actors/Themes-and-Fonts/Theme-mk0.tres" id="2_qsba6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mees8"]
radius = 50.0

[node name="State-Area2D" type="Area2D"]
script = ExtResource("1_0c1gk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mees8")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(80, 20)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -17.0
offset_right = 45.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StateName" type="LineEdit" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_qsba6")
text = "State 0"
alignment = 1
expand_to_text_length = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="gui_input" from="MarginContainer/StateName" to="." method="_on_state_name_gui_input"]
[connection signal="mouse_entered" from="MarginContainer/StateName" to="." method="_on_state_name_line_edit_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/StateName" to="." method="_on_state_name_line_edit_mouse_exited"]
[connection signal="text_submitted" from="MarginContainer/StateName" to="." method="_on_state_name_line_edit_text_submitted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
